--- a/modulo-02/desafios/desafio-012/style/style.css
+++ b/modulo-02/desafios/desafio-012/style/style.css
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Delicious+Handrawn&family=Passion+One:wght@400;700;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+    --font1: Verdana, Geneva, Tahoma, sans-serif;
+    --font2: 'Passion One', cursive;
+    --font3: 'Sriracha', cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -8,6 +18,7 @@
 html, body {
     min-height: 100vh;
     background-color: rgb(99, 121, 121);
+    font-family: var(--font1);
 }
 
 header {
@@ -20,11 +31,13 @@ header {
 header h1 {
     padding-top: 50px;
     font-variant: small-caps;
-    
+    font-family: var(--font2);
+    font-size: 10vw;
 }
 
 header p {
     padding-bottom: 50px;
+    font-family: var(--font1);
 }
 
 header a{
@@ -42,6 +55,8 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 35px;
+    font-family: var(--font3);
+    font-size: 3.6vw;
 }
 
 .normal {
@@ -56,7 +71,8 @@ section {
 
 .imagem > p {
     background-color: rgba(0, 0, 0, 0.322);
-    width: 400px;
+    display: inline-block;
+    padding: 10px;
 }
 
 footer {
