--- a/modulo-02/desafios/desafio-012/style/style.css
+++ b/modulo-02/desafios/desafio-012/style/style.css
@@ -56,7 +56,7 @@ section {
     line-height: 2em;
     padding-left: 35px;
     font-family: var(--font3);
-    font-size: 3.6vw;
+    font-size: 3.1vw;
 }
 
 .normal {
@@ -67,12 +67,29 @@ section {
 .imagem {
     background-color: rgb(46, 46, 46);
     color: white;
+    box-shadow: inset 6px 6px 12px 0px rgba(0, 0, 0, 0.495);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 .imagem > p {
-    background-color: rgba(0, 0, 0, 0.322);
+    background-color: rgba(0, 0, 0, 0.652);
     display: inline-block;
     padding: 10px;
+    text-shadow: 1.5px 1.5px 0px black;
+}
+
+section > p {
+    padding-bottom: 2em;
+}
+
+#img1 {
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+}
+
+#img2 {
+    background-image: url(../imagens/background002.jpg);
 }
 
 footer {
